[package]
name = "reverse_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
futures-util = "0.3.24"
hyper = { version = "0.14.20", features = ["full"] }
hyper-rustls = "0.23.0"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread", "time"] }
